# acts-aas

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
ActsExaTrkXStandalone/: CMakeLists.txt  README.md
ActsExaTrkXStandalone/scripts/: convert.py  gen_json.py  inference.py
ActsExaTrkXStandalone/src/: ActsExaTrkX.hpp  ActsExaTrkXStandalone.cpp
ActsExaTrkXTritonBackend/: CMakeLists.txt  README.md  log.lunch.txt
ActsExaTrkXTritonBackend/cmake/: ActsExaTrkXBackendConfig.cmake.in
ActsExaTrkXTritonBackend/model_repo/ActsExaTrkX/: config.pbtxt
ActsExaTrkXTritonBackend/src/: ActsExaTrkX.cc  ActsExaTrkXClass.hpp
Clients/: ActsExaTrkXTritionClient.py  README.md  event000000000-spacepoint-converted.csv  event000000000-spacepoint-converted.json  ex-event000000000-backend-output-labels.npy  grpc_client_test.py
Dockers/: Dockerfile-raw  Dockerfile-tritonbase  README.md
Evaluation/: README.md
Evaluation/plotting/: plot_1GPU.ipynb  plot_4GPU.ipynb  utils.py
Evaluation/results-Feb22-test4gpus-1inst/1insts_4gpus/: perf_analyzer_1insts_4gpus_sync.csv
Evaluation/results/1insts_1gpus/: perf_analyzer_1insts_1gpus_sync.csv
Evaluation/scripts/: evaluate_triton.sh  run_evaluate.sh
Kubernetes/: README.md  acts-triton-dep.yaml  acts-triton-ingress-v1.yaml  acts-triton-ingress.yaml  acts-triton-pod.yaml  acts-triton-svc.yaml  acts-triton-vol.yaml
Scripts/: genSamples.py  make_acts.sh  make_acts_complete.sh  make_triton.sh  setup_acts.sh  setup_env.cfg
reso-diff/: READEME.md  make_acts.sh  make_triton.sh
reso-diff/dev_load/: CMakeLists.txt  load_torch.cpp
reso-diff/scripts/: convert.py  inference.py
